# rust-practice

./: .gitignore  Cargo.toml
common_collections/: Cargo.toml
common_collections/src/: main.rs
common_collections_ex_piglatin/src/: main.rs
control_flow/: Cargo.toml
enum-and-pattern-match/: Cargo.toml
enum-and-pattern-match/src/: main.rs
error_handling/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
if_let_example/: Cargo.toml
if_let_example/src/: main.rs
iterators_and_closures/src/: main.rs
iterators_and_closures_2/src/: main.rs
lifetimes/: Cargo.toml
lifetimes/src/: main.rs
medium_understanding_rust_lifetime/src/: main.rs
minigrep/src/: lib.rs
minigrep2/src/: lib.rs  main.rs
package_and_crates_separate_files/: Cargo.toml
package_and_crates_separate_files/src/: main.rs
packages_and_crates/: Cargo.toml
packages_and_crates/src/: main.rs
proc-macro-workshop/builder/: Cargo.toml
ref_and_borrowing/: Cargo.toml
rust-lifetime-from-youtube/: Cargo.toml
rust-lifetime-from-youtube/src/: main.rs
rust_by_example/src/: main.rs
scratch_pad/: Cargo.toml
scratch_pad/src/: main.rs
scratch_pad2/: Cargo.toml
snippets/derive_mode/: Cargo.toml
snippets/enum_from_string/: Cargo.toml
snippets/enum_from_string/src/: config.toml  lib.rs  main.rs
snippets/macro_example/: Cargo.toml
snippets/macro_example/src/: main.rs
test_project/: Cargo.toml
the_book/common_collections_ex_piglatin/: Cargo.toml
the_book/common_collections_exercises/: Cargo.toml
types_traits/: Cargo.toml
types_traits_lifetimes/: Cargo.toml
(+46 files in other folders)
