[package]
name = "enum_from_string"
version = "0.1.0"
authors = ["TakaakiFuruse <takaakifuruse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version =  "0.15.42", features = ["extra-traits", "full"] }
proc-macro2 = "0.4.30"
quote = "0.6.12"
cargo-expand = "0.4.13"
toml = "0.4.2"
