[package]
name = "macro_example"
version = "0.1.0"
authors = ["TakaakiFuruse <takaakifuruse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
[dependencies]
syn = {version="0.15.43", features = ["full", "visit"]}
quote = "0.6.13"


